Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13324

JSON_SET returns NULL instead of object

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2(EOL)
    • 10.2.9
    • JSON
    • None

    Description

      In MySQL 5.7:

      SELECT JSON_SET('{}', '$.age', 87); 
      +-----------------------------+
      | JSON_SET('{}', '$.age', 87) |
      +-----------------------------+
      | {"age": 87}                 |
      +-----------------------------+
      

      In MariaDB 10.2:

      SELECT JSON_SET('{}', '$.age', 87); 
      +-----------------------------+
      | JSON_SET('{}', '$.age', 87) |
      +-----------------------------+
      | NULL                        |
      +-----------------------------+
      

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              greenman Ian Gilfillan
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.