MDEV-13324 JSON_SET returns NULL instead of object.

Superfluous ',' was added to the JSON_SET result so it became
        invalid.